fix: html vode validation errors

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,8 @@
 <div class="overlay"></div>
 <section class="jumbotron text-center dark-green-block">
     <div class="container jumbotron-content">
-        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.webp" class="jumbotron-logo" alt="taco y tequila logo" height="100" width="120">
+        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.webp" class="jumbotron-logo"
+            alt="taco y tequila logo" height="100" width="120">
         <h1 class="logo-font text-white">Taco y Tequila</h1>
         <p class="text-white">
             Discover Mexico's culinary essence at Taco Y Tequila! Indulge in vibrant flavors, savor mouthwatering tacos,
@@ -24,14 +25,13 @@
         </p>
     </div>
 </section>
-
 <div class="album py-5">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="475" height="255" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp"
-                        alt="drink">
+                    <img class="bd-placeholder-img card-img-top" width="475" height="255"
+                        src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp" alt="drink">
                     <div class="card-body">
                         <p>
                             Sip, savor, and celebrate! Explore our exquisite tequilas and crafted drinks at Taco Y
@@ -40,7 +40,8 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beers"" class="btn btn-sm btn-red text-white">
+                                <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beers"
+                                    class="btn btn-sm btn-red text-white">
                                     Shop Drinks
                                 </a>
                             </div>
@@ -51,8 +52,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm dark-green-block">
-                    <img class="bd-placeholder-img card-img-top" width="475" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp"
-                        alt="food">
+                    <img class="bd-placeholder-img card-img-top" width="475" height="225"
+                        src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp" alt="food">
                     <div class="card-body">
                         <p class="text-white">
                             Experience a fiesta of flavors at Taco Y Tequila! Indulge in our mouthwatering Mexican food,
@@ -61,7 +62,8 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot" class="btn btn-sm btn-outline">
+                                <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot"
+                                    class="btn btn-sm btn-outline">
                                     Shop Food
                                 </a>
                             </div>
@@ -72,8 +74,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="475" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp"
-                        alt="events">
+                    <img class="bd-placeholder-img card-img-top" width="475" height="225"
+                        src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp" alt="events">
                     <div class="card-body">
                         <p>
                             Spice up your next event with the Taco Y Tequila food truck! Our delectable Mexican cuisine
