--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -12,7 +12,7 @@
 <div class="overlay"></div>
 <div class="container-fluid px-3">
     <div class="row">
-        <div class="col-12 col-sm-6 p-4 my-auto">
+        <div class="col-12 col-sm-6 p-4 my-auto mt-5 mb-5">
             <h1 class="logo-font">404 error page</h1>
             <p class="logo-font">An error has occurred, click <a href="{% url 'home' %}">here</a> to go to the home page.</p>
         </div>
