--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,8 @@
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="all-products-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -16,9 +17,9 @@
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="meal-kits-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="meal-kits-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Meal Kits
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="meal-kits-link">
@@ -26,24 +27,26 @@
                 <a href="{% url 'products' %}?category=mealkits_medium" class="dropdown-item">Medium</a>
                 <a href="{% url 'products' %}?category=mealkits_hot" class="dropdown-item">Hot</a>
                 <a href="{% url 'products' %}?category=mealkits_veryhot" class="dropdown-item">Very Hot</a>
-                <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot" class="dropdown-item">All Meal Kits</a>
+                <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot"
+                    class="dropdown-item">All Meal Kits</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="drinks-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="drinks-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Drinks
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="drinks-link">
                 <a href="{% url 'products' %}?category=drinks_tequila" class="dropdown-item">Tequila</a>
                 <a href="{% url 'products' %}?category=drinks_softdrinks" class="dropdown-item">Soft Drinks</a>
                 <a href="{% url 'products' %}?category=drinks_beer" class="dropdown-item">Beers</a>
-                <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beer" class="dropdown-item">All Drinks</a>
+                <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beer"
+                    class="dropdown-item">All Drinks</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="spices-sauces-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="spices-sauces-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Sauces &amp; Spices
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="spices-sauces-link">
@@ -51,9 +54,9 @@
                 <a href="{% url 'products' %}?category=spices" class="dropdown-item">Spices</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="{% url 'book_event' %}" id="events-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="{% url 'book_event' %}" id="events-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Event's
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="events-link">
