--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -44,10 +44,5 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+    <script src="{% static 'products/js/products.js' %}"></script>
 {% endblock %}
