style: add hidden class to form label

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,18 +72,26 @@ body {
     background-color: var(--main-color) !important;
 }
 
-/* .home-page-box {
-    background-color: var(--block-main);
-    border-radius: 3px;
-} */
-
 .text-white {
     color: #fff;
 }
 
+/* Hidden Items */
 .hidden {
     display: none;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
 
 /* from Bulma */
 .icon {
