--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -18,7 +18,7 @@
                 <div class="col-lg-2 col-md-6">
                     <p class="logo-font mb-3">Events</p>
                     <ul class="list-unstyled text-main">
-                        <li><a href="{% url 'book_event' %}" class="text-main">Book an Event</a></li>
+                        <li><a href="{% url 'book_event' %}" class="text-main">Events</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
