--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,7 @@
     <div class="container-fluid content-container">
         <div class="row mt-5 mb-5">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
+                <h1 class="logo-font">Products</h1>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-3 mr-2 badge rounded-pill">{{ c.friendly_name }}</span>
@@ -28,6 +28,7 @@
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
+                            <label for="sort-selector" class="visually-hidden">Sort by:</label>
                             <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
@@ -42,7 +43,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
+                        <p class="text-main mt-3 text-center text-md-left">
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
                                 <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
                             {% endif %}
@@ -64,7 +65,7 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body pb-0 product-card">
-                                    <p class="mb-0">{{ product.name }}</p>
+                                    <h2 class="mb-0">{{ product.name }}</h2>
                                 </div>
                                 <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
