--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -70,7 +70,7 @@
                                 <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                                            <h3 class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</h3>
                                             <div class="product-card-block product-card-block-blue">
                                                 {% if product.category %}
                                                 <p class="small mt-1 mb-1">
