--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -10,6 +10,7 @@
         <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
             <form class="form" method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
+                    <label for="mobile-search" class="visually-hidden">Search:</label>
                     <input class="form-control border border-black rounded-0" type="text" name="q"
                         placeholder="Search our site" id="search-for-mobile">
                     <div class="input-group-append">
