html validation: fix button elemtn

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -15,7 +15,7 @@
                         placeholder="Search our site" id="search-for-mobile">
                     <div class="input-group-append">
                         <button class="btn-green form-control btn btn-black border border-black rounded-0"
-                            type="submit">
+                            type="submit" aria-label="Search">
                             <span class="icon">
                                 <i class="fas fa-search"></i>
                             </span>
