--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -20,7 +20,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <a class="btn btn-outline rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <input class="btn-red" type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="btn-red" type="submit" value="{% trans 'Reset My Password' %}">
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
