--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -15,9 +15,10 @@
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button class="btn-red" type="submit">{% trans "Sign Up" %}</button>
+  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+  <button type="submit">{% trans "Sign Up" %}</button>
 </form>
+
 {% endblock %}
