--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,7 @@
 								{% if request.user.is_authenticated %}
 								{% if request.user.is_superuser %}
 								<a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+								<a href="{% url 'add_team_member' %}" class="dropdown-item">Staff Management</a>
 								{% endif %}
 								<a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
 								<a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
