--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,8 @@
 <div class="overlay"></div>
 <section class="jumbotron text-center dark-green-block">
     <div class="container jumbotron-content">
-        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.webp" class="jumbotron-logo"
-            alt="taco y tequila logo" height="100" width="120">
+        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-whi.png" class="jumbotron-logo"
+            alt="taco y tequila logo" height="90" width="90">
         <h1 class="logo-font text-white">Taco y Tequila</h1>
         <p class="text-white">
             Discover Mexico's culinary essence at Taco Y Tequila! Indulge in vibrant flavors, savor mouthwatering tacos,
