--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 			<div id="topnav" class="row top-nav pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 					<a href="{% url 'home' %}" class="nav-link main-logo-link">
-						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.webp"
+						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-blk.png"
 							alt="taco-y-tequila logo" class="my-0 logo" height="80" width="80">
 					</a>
 				</div>
