--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -13,6 +13,7 @@
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
+            <h1 class="mb2 mt-2 logo-font">{{ product.name }}</h1>
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
                 <div class="image-container my-5">
                     {% if product.image %}
