--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
 								href="{% url 'view_bag' %}">
 								<div class="text-center">
 									<div><i class="icon-dark fas fa-shopping-bag fa-lg"></i></div>
-									<p class="my-0">
+									<p class="my-0 text-main">
 										{% if grand_total %}
 										£{{ grand_total|floatformat:2 }}
 										{% else %}
