removed all text-muted class

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,7 +44,7 @@
                         {% if product.spicerating %}
                             <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spicerating }} / 5</small>
                         {% else %}
-                            <small class="text-muted">No Rating</small>
+                            <small class="text-main">No Rating</small>
                         {% endif %}
                     </div>
                         {% if request.user.is_superuser %}
