--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -16,7 +16,7 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Staff Management</h2>
-                <h5 class="text-muted">Add a Team Member</h5>
+                <h5 class="text-main">Add a Team Member</h5>
                 <hr>
             </div>
         </div>
