--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -16,7 +16,7 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h1 class="logo-font mb-4">Product Management</h1>
-                <h5 class="text-muted">Edit a Product</h5>
+                <h5 class="text-main">Edit a Product</h5>
                 <hr>
             </div>
         </div>
