--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,6 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
-        <h1 class="mb2 mt-2 logo-font">{{ product.name }}</h1>
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
                 <div class="image-container my-5">
@@ -29,7 +28,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                     <div class="product-details-container mb-5 mt-md-5">
-                        <p class="mb-0">{{ product.name }}</p>
+                        <h1 class="mb-0">{{ product.name }}</h1>
                         <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                         <div class="product-card-block product-card-block-blue">
                         {% if product.category %}
