--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -40,9 +40,9 @@
                         <div class="col-2 mb-1">
                             <a href="{% url 'product_detail' item.product.id %}">
                                 {% if item.product.image %}
-                                    <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+                                    <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                 {% else %}
-                                    <img class="w-100" src="{{ MEDIA_URL }}no-image.jpg" alt="{{ product.name }}">
+                                    <img class="w-100" src="{{ MEDIA_URL }}no-image.jpg" alt="{{ item.product.name }}">
                                 {% endif %}
                             </a>
                         </div>
@@ -93,7 +93,7 @@
                         {{ order_form.town_or_city | as_crispy_field }}
                         <label class="visually-hidden" for="id_county">County</label>
                         {{ order_form.county | as_crispy_field }}
-                        <label class="visually-hidden" for="id_post_code">Post Code</label>
+                        <label class="visually-hidden" for="id_postcode">Post Code</label>
                         {{ order_form.postcode | as_crispy_field }}
                         <label class="visually-hidden" for="id_country">Country</label>
                         {{ order_form.country | as_crispy_field }}
@@ -130,7 +130,7 @@
 								<i class="fas fa-lock"></i>
 							</span>
 						</button>
-						<p class="small text-danger my-0">
+						<p class="font-weight-bold text-danger my-0">
 							<span class="icon">
 								<i class="fas fa-exclamation-circle"></i>
 							</span>
