--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -3,8 +3,8 @@
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-green rounded-0"
-                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                <button class="decrement-qty btn btn-sm btn-red rounded-0"
+                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}" aria-label="decrease quantity">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
@@ -14,8 +14,8 @@
                 name="quantity" value="{{ item.quantity }}" min="1" max="99"
                 data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-green rounded-0"
-                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                <button class="increment-qty btn btn-sm btn-red rounded-0"
+                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}" aria-label="increase quantity">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
@@ -27,6 +27,6 @@
         </div>
     </div>
 </form>
-<a class="update-link text-info"><small>Update</small></a>
+<a class="update-link text-info">Update</a>
 <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"
     data-product_size="{{ item.size }}"><small>Remove</small></a>
