--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -29,4 +29,4 @@
 </form>
 <a class="update-link text-info">Update</a>
 <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"
-    data-product_size="{{ item.size }}"><small>Remove</small></a>
+    data-product_size="{{ item.size }}">Remove</a>
