--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
     --main-color-sec: #40724e;
     --text-main: #0C1829;
     --block-main: #22A699;
+    --red: #EE4B2B;
   }
 
 p {
@@ -74,6 +75,14 @@ body {
 
 .text-white {
     color: #fff;
+}
+
+.dark-green-text {
+    color: var(--main-color-sec);
+}
+
+.red-text {
+    color: var(--red);
 }
 
 /* Hidden Items */
