--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -55,7 +55,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="{% url 'book_event' %}" id="events-link"
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="events-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Event's
             </a>
