--- a/static/css/base.css
+++ b/static/css/base.css
@@ -134,8 +134,30 @@ body {
 }
 
 .btn-red {
+    padding: 2px;
     background: var(--main-color-sec);
     color: white;
+}
+
+.edit-btn {
+    padding: 2px;
+    background-color: var(--main-color);
+    color: var(--text-main);
+}
+
+.edit-btn:hover {
+    background-color: var(--text-main);
+    color: var(--main-color);
+}
+
+.delete-btn {
+    background-color: var(--red);
+    color: #000;
+}
+
+.delete-btn:hover {
+    background-color: #000;
+    color: var(--red);
 }
 
 .btn-outline {
