--- a/events/templates/book_event.html
+++ b/events/templates/book_event.html
@@ -25,8 +25,8 @@
                         {% csrf_token %}
                         <!--input service-->
                         <div>
-                            <h3 class="logo-font">Select Event Type</h3>
-                            <select class="form-select fs-3" name="event_type">
+                            <label for="id_event_type" class="logo-font">Select Event Type:</label>
+                            <select id="id_event_type" class="form-select fs-3" name="event_type">
                                 <option value="Fajita Party">Fajita Party</option>
                                 <option value="Taco Party">Taco Party</option>
                                 <option value="Taco y Tequila Special">Taco y Tequila Special</option>
@@ -34,10 +34,10 @@
                         </div>
                         <!--input day-->
                         <div class="mt-3">
-                            <h3 class="logo-font">Select Day:</h3>
-                            <select class="form-select fs-3" name="day">
+                            <label for="id_day" class="logo-font">Select Day:</label>
+                            <select id="id_day" class="form-select fs-3" name="day">
                                 {% for valid_weekday in validate_weekdays %}
-                                <option value="{{valid_weekday}}">{{valid_weekday}}</option>
+                                <option value="{{ valid_weekday }}">{{ valid_weekday }}</option>
                                 {% endfor %}
                             </select>
                         </div>
