--- a/events/templates/book_event.html
+++ b/events/templates/book_event.html
@@ -25,7 +25,7 @@
                         {% csrf_token %}
                         <!--input service-->
                         <div>
-                            <label for="id_event_type" class="logo-font">Select Event Type:</label>
+                            <label for="id_event_type" class="visually-hidden">Select Event Type:</label>
                             <select id="id_event_type" class="form-select fs-3" name="event_type">
                                 <option value="Fajita Party">Fajita Party</option>
                                 <option value="Taco Party">Taco Party</option>
@@ -34,7 +34,7 @@
                         </div>
                         <!--input day-->
                         <div class="mt-3">
-                            <label for="id_day" class="logo-font">Select Day:</label>
+                            <label for="id_day" class="visually-hidden">Select Day:</label>
                             <select id="id_day" class="form-select fs-3" name="day">
                                 {% for valid_weekday in validate_weekdays %}
                                 <option value="{{ valid_weekday }}">{{ valid_weekday }}</option>
